fix button back z-index

--- a/src/components/header-content/header-content.scss
+++ b/src/components/header-content/header-content.scss
@@ -15,5 +15,6 @@ header-content {
     .back-button.show-back-button {
         display: inline-block;
         position: absolute;
+        z-index: 1;
     }
 }
